--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -77,18 +77,18 @@
 
 
   <!-- Hero / Page Title -->
-  <section class="hero-meet-the-team fade-in">
+  <section class="hero-meet-the-team">
   <div class="hero-overlay">
   </div>
   </section>
 
 
-  <section class="page-hero fade-in">
+  <section class="page-hero">
     <h1>Meet the Team</h1>
   </section>
 
   <!-- Team Grid -->
-  <main class="team-section fade-in">
+  <main class="team-section">
     <div class="team-grid">
       <!-- President Card -->
       <div class="team-card">
@@ -279,3 +279,4 @@
 
 
 </html>
+
