--- a/our-mission.html
+++ b/our-mission.html
@@ -21,7 +21,7 @@
     <nav>
       <ul class="tabs">
           <li class="dropdown">
-            <a href="" class="dropdown-button">About Us</a>
+            <a href="#" class="dropdown-button">About Us</a>
             <ul class="dropdown-content">
               <li><a href="our-mission.html">Our Mission</a></li>
               <li><a href="meet-the-team.html">Meet the Team</a></li>
@@ -30,7 +30,7 @@
           </li>
 
           <li class="dropdown">
-            <a href="" class="dropdown-button">Our Projects</a>
+            <a href="#" class="dropdown-button">Our Projects</a>
             <ul class="dropdown-content">
               <li><a href="ride-on-car.html">Ride-on Car</a></li>
               <li><a href="toys-for-all.html">Toys-for-All</a></li>
@@ -40,7 +40,7 @@
           </li>
 
           <li class="dropdown">
-            <a href="" class="dropdown-button">Design</a>
+            <a href="#" class="dropdown-button">Design</a>
             <ul class="dropdown-content">
               <li><a href="join-a-design-team.html">Join a Design Team</a></li>
               <!-- <li><a href="#">Design Team Resources</a></li> -->
@@ -48,7 +48,7 @@
           </li>
 
           <li class="dropdown">
-          <a href="" class="dropdown-button">Get Involved</a>
+          <a href="#" class="dropdown-button">Get Involved</a>
             <ul class="dropdown-content">
               <li><a href="join-us.html">Join Us</a></li>
               <li><a href="support-us.html">Support Us</a></li>
@@ -56,7 +56,7 @@
           </li>
 
           <li class="dropdown">
-          <a href="" class="dropdown-button">Community</a>
+          <a href="#" class="dropdown-button">Community</a>
             <ul class="dropdown-content">
               <li><a href="adaptive-technology-and-resources-support.html">Adaptive Tech. & Resources Request</a></li>
               <li><a href="resources-and-support.html">Resources & Support</a></li>
@@ -213,4 +213,5 @@
 </footer>
 
 </body>
+
 </html>
