--- a/resources-and-support.html
+++ b/resources-and-support.html
@@ -41,7 +41,7 @@
           </li>
 
           <li class="dropdown">
-            <a href="" class="dropdown-button">Design</a>
+            <a href="#" class="dropdown-button">Design</a>
             <ul class="dropdown-content">
               <li><a href="join-a-design-team.html">Join a Design Team</a></li>
               <!-- <li><a href="#">Design Team Resources</a></li> -->
@@ -49,7 +49,7 @@
           </li>
 
           <li class="dropdown">
-          <a href="" class="dropdown-button">Get Involved</a>
+          <a href="#" class="dropdown-button">Get Involved</a>
             <ul class="dropdown-content">
               <li><a href="join-us.html">Join Us</a></li>
               <li><a href="support-us.html">Support Us</a></li>
@@ -57,7 +57,7 @@
           </li>
 
           <li class="dropdown">
-          <a href="" class="dropdown-button">Community</a>
+          <a href="#" class="dropdown-button">Community</a>
             <ul class="dropdown-content">
               <li><a href="adaptive-technology-and-resources-support.html">Adaptive Tech. & Resources Request</a></li>
               <li><a href="resources-and-support.html">Resources & Support</a></li>
@@ -232,5 +232,6 @@
   </footer>
   
 </body>
+
 
 </html>
