--- a/toy-for-all-pictures.html
+++ b/toy-for-all-pictures.html
@@ -85,7 +85,7 @@
       <img src="assets/images-toyforall/img-1-toys-for-all.png" alt="CAD clamp">
       <img src="assets/images-toyforall/img-2-toys-for-all.PNG" alt="CAD handle">
       <img src="assets/images-toyforall/img-3-toys-for-all.png" alt="CAD connector">
-      <img src="assets/images-toyforall/img-4-toys-for-all.png" alt="Sketch idea for car cage">
+      <img src="assets/images-toyforall/img-4-toys-for-all.PNG" alt="Sketch idea for car cage">
       <img src="assets/images-toyforall/img-5-toys-for-all.jpeg" alt="Toys-for-All team posing">
 
     </div>
@@ -122,3 +122,4 @@
 
 
 </html>
+
